force-app/main/default/objects/Forecast__c/Forecast__c.object-meta.xml
<CustomObject>
    <label>Forecast</label>
    <nameField>
        <displayFormat>F-{00000000}</displayFormat>
        <label>Forecast Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Forecast</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>