force-app/main/default/objects/Forecast__c/fields/Current_Month_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Current_Month_Forecast__c</fullName>
    <label>Current Month Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>