force-app/main/default/objects/Forecast__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Forecast</relationshipLabel>
    <relationshipName>Forecast1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>