force-app/main/default/objects/Forecast__c/fields/Hisense_RSM__c.field-meta.xml
<CustomField>
    <fullName>Hisense_RSM__c</fullName>
    <formula>Customer__r.Hisense_ASM__r.User_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hisense RSM</label>
    <type>Text</type>
</CustomField>