force-app/main/default/objects/Forecast__c/fields/Next_Month_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Next_Month_Forecast__c</fullName>
    <label>T+1 Month Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>