force-app/main/default/objects/Forecast__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>text(Customer__r.Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>