force-app/main/default/objects/Forecast__c/fields/YTD_Actual__c.field-meta.xml
<CustomField>
    <fullName>YTD_Actual__c</fullName>
    <label>YTD Actual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>