force-app/main/default/objects/Forecast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Channel__c</columns>
    <columns>Region__c</columns>
    <columns>Hisense_ASM__c</columns>
    <columns>Hisense_RSM__c</columns>
    <columns>YTD_Actual__c</columns>
    <columns>Current_Month_Forecast__c</columns>
    <columns>Next_Month_Forecast__c</columns>
    <columns>Next_Next_Month_Forecast__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>